--- a/index.html
+++ b/index.html
@@ -40,6 +40,16 @@
 
     </nav>
 
+    <!-- hero section -->
+
+    <div
+        class=" gap-4 flex flex-col justify-center items-center h-64 w-full bg-[linear-gradient(90deg,#013223,#006747_50%,#013223_100%)]">
+        <img class=" h-[75px]" src="./assets/logo-dark.png" alt="">
+        <h1 class=" font-bold text-white text-[30px]">Emergency Service Directory</h1>
+        <p class="font-semibold text-center text-white text-[15px]">Government Emergency Services at Your Fingertip - A
+            Project by Government of the People’s Republic of Bangladesh</p>
+    </div>
+
 
 <script src="./script.js"></script>
 
